<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yeelight.testnewux.HomeActivity">


    <TextView
        android:id="@+id/MoodPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/MoodPrompt"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/Happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="120dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/happy"
        android:src="@mipmap/hoala_happy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HappyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:text="@string/happy"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Happy" />

    <ImageButton
        android:id="@+id/Sad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/sad"
        android:src="@mipmap/hoala_sad"
        app:layout_constraintStart_toEndOf="@+id/Happy"
        app:layout_constraintTop_toTopOf="@+id/Happy" />


    <TextView
        android:id="@+id/SadLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sad"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Party"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sad"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/Sleepy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/sleepy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Happy"
        android:src="@mipmap/hoala_sleepy" />

    <TextView
        android:id="@+id/SleepyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:text="@string/sleepy"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sleepy" />

    <ImageButton
        android:id="@+id/Party"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/temperature"
        android:src="@mipmap/hoala_party"
        app:layout_constraintStart_toEndOf="@+id/Happy"
        app:layout_constraintTop_toBottomOf="@+id/Sad" />

    <TextView
        android:id="@+id/PartyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/party"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Party" />


</android.support.constraint.ConstraintLayout>