<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yeelight.testnewux.HomeActivity">


    <ImageButton
        android:id="@+id/Alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="140dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/alarm"
        android:src="@mipmap/hoala_alarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginBottom="8dp"
        android:text="@string/alarm"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Alarm"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/light"
        android:src="@mipmap/hoala_light"
        app:layout_constraintStart_toEndOf="@+id/Alarm"
        app:layout_constraintTop_toTopOf="@+id/Alarm" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="86dp"
        android:layout_marginRight="86dp"
        android:layout_marginBottom="8dp"
        android:text="@string/light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Light"
        app:layout_constraintVertical_bias="0.02" />

    <ImageButton
        android:id="@+id/Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/settings"
        android:src="@mipmap/hoala_settings"
        app:layout_constraintStart_toStartOf="@+id/Alarm"
        app:layout_constraintTop_toBottomOf="@+id/Light" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:text="@string/settings"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Settings" />

    <ImageButton
        android:id="@+id/Temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/temperature"
        android:src="@mipmap/hoala_temperature"
        app:layout_constraintStart_toEndOf="@+id/Alarm"
        app:layout_constraintTop_toBottomOf="@+id/Light" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/temperature"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Temperature" />


</android.support.constraint.ConstraintLayout>